--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,59 @@
-/* Fonts */
-@font-face {
-    font-family: conthrax;
-    src: url(../assets/fonts/conthrax-sb.ttf);
-}
+/* Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Orbitron&display=swap');
 :root {
-    --main-color: #6cc5ef;
+    --menu-background: linear-gradient(90deg, rgba(162,114,194,1) 0%, rgba(245,61,61,1) 50%, rgba(233,174,91,1) 100%);
     --white: #ffffff;
     --link-hover: #dfe2ff;
+    --menu-font: Orbitron, serif;
+    --main-font: Montserrat, serif;
+}
+* {
+    font-family: var(--main-font);
 }
 /*Menu*/
 .link {
     display: flex;
     justify-content: center;
-    width: 100%;
-    background-color: var(--main-color);
-
 }
 .link a {
-    font-size: 1rem;
+    font-size: 1.2rem;
     color: var(--white);
     text-decoration: none;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    font-family: conthrax;
-    transition: border, ease-in, .2s ;
-
-}
-.logo {
-    font-size: 1.2;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    font-family: var(--menu-font);
+    transition: .3s;
 }
 .link a:hover {
     color: var(--link-hover);
+    text-decoration: line-through;
 }
 .menu {
     display: flex;
-    background-color: var(--main-color);
-    width: 100wh;
+    background: var(--menu-background);
+    width: 100%;
     justify-content: center;
+}
+/* Main */
+
+.home-content{
+    width: 100%;
+    align-items: center;
+    text-align: center;
+}
+.home-content div h1 {
+    font-size: 3.5rem;
+}
+
+footer {
+    margin-top: 5rem;
+    background-color: rgb(241, 255, 150);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.right {
+    text-align: center;
 }
