--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     --main-font: Montserrat, arial, serif;
     --footer-link-hover: #56306c;
     --download-button-background: #fff9f9;
+    --d-download-button-background: #9f59c7;
 }
 * {
     font-family: var(--main-font);
@@ -38,7 +39,6 @@
     width: 100%;
     justify-content: center;
 }
-
 /* home */
 .home {
     display: flex;
@@ -104,28 +104,62 @@ footer div a:hover {
     margin-top: 2rem;
     margin-bottom: 3rem;
 }
-.phone-card img {
-    max-width: 200px;
-    width: auto;
-}
 .phone-card div {
     position: relative;
     display: flex;
-    justify-content: center;
-    width: 100%;
-    margin-top: -3.8rem;
+    justify-content: center;    
+    margin-top: -2.8rem;
 }
 .download-button {
     text-decoration: none;
-    margin-top: 1rem;
     padding: .8rem;
     padding-top: .6rem;
     padding-bottom: .6rem;
     color: var(--white);
     border-radius: .3rem;
-    transition-duration:.3s;
+    transition-duration: .3s;
 }
 .download-button:hover {
     background-color: var(--download-button-background);
+    color: var(--black);
+}
+/**====================================
+                Desktop
+====================================*/
+.desktop-card {
+    margin-top: 3rem;
+    position: relative;
+}
+.desktop-card img {
+    display: block;
+}
+.desktop-card-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: .25s;
+}
+.desktop-card-overlay:hover {
+    opacity: 1;
+}
+.desktop-card-overlay a {
+    padding: 1rem;
+    font-size: 1rem;
+    color: var(--white);
+    text-decoration: none;
+    border-radius: .3rem;
+    transition: transform , .25s;
+
+}
+.desktop-card-overlay a:hover {
+    background-color: rgba(255, 255, 255, 0.50);
     color: var(--black);
 }
