--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,9 @@ footer div a:hover {
 /**====================================
                 Desktop
 ====================================*/
+.desktop-content {
+    text-align: center;
+}
 .desktop-card {
     margin-top: 3rem;
     position: relative;
